# ai-native-journey

./: .gitignore  README.md  database.py  main.py  models.py  old_main.py  pyproject.toml  schemas.py  test_ai.py
routers/: ai.py  users.py
services/: ai.py
